--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-matplotlib = "*"
+matplotlib = "==3.0.2"
+kiwisolver = "==1.0.1"
+numpy = "==1.15.4"
+pyparsing = "==2.3.0"
+python-dateutil = "==2.7.5"
+pytz = "==2018.7"
+six = "==1.11.0"
+Django = "==2.1.3"
+Cycler = "==0.10.0"
 
 [dev-packages]
 
